# Art-Companion-project

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
backend/: __init__.py  app.py  config.py
backend/agent/: __init__.py  studio_agent.py
backend/models/: __init__.py  conversation.py  idea.py  portfolio.py  project.py  supply.py  user.py
backend/routes/: __init__.py  conversations.py  ideas.py
backend/tools/: __init__.py  inspiration.py  inventory.py  portfolio.py  project.py
data/: .gitkeep
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  auth.js  chat.js  components.js
